--- a/Chase.CrashReporter/Chase.CrashReporter.csproj
+++ b/Chase.CrashReporter/Chase.CrashReporter.csproj
@@ -4,10 +4,24 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Version>0.0.1</Version>
+        <Title>Crash Reporter</Title>
+        <Authors>Drew Chase</Authors>
+        <Description>A simple library to handle crashes and generate crash reports.</Description>
+        <Copyright>GNU 3.0</Copyright>
+        <PackageProjectUrl>https://github.com/Drew-Chase/Chase.CrashReporter</PackageProjectUrl>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.MD</PackageReadmeFile>
+        <RepositoryUrl>https://github.com/Drew-Chase/Chase.CrashReporter</RepositoryUrl>
+        <RepositoryType>Github</RepositoryType>
+        <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <None Include="../LICENSE" Pack="true" PackagePath="/" />
+        <None Include="../README.MD" Pack="true" PackagePath="/" />
     </ItemGroup>
 
 </Project>
